--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <!--<script  type="module"  src="./orgaos.js" defer></script>-->
 </head>
 <body>
+  <div class="header">
+    <div>
+      <span><img src="https://pm1.narvii.com/6434/36a290a925f1ae788e0e545f3e8bfbafcad7e4ff_hq.jpg"></span>
+    </div>
+    <div>
+      <label for="buscar">Buscar Órgão: </label>
+      <input id="buscar" type="number" placeholder="Digite um código de órgão">
+    </div>
+  </div>
 <div class="container">
   <style>
     #svg-map path { fill:#0094d9 }
