--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-XcLjxI7wlxJuFDmB5v5IaAOPUX+9K+xJWnYd/6HwfcHBkx+Dml8Wl+fN7v4+4K7V1aW6u+7Yxx2oFnRcJ6z/g==" crossorigin="anonymous" />-->
   <meta charset="UTF-8">
   <title>Detrans e Prefeituras</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./style.css"></link>
-  <script type="module" src="../js/main.js" defer></script>
-  <!--<script  type="module"  src="./orgaos.js" defer></script>-->
- 
+  <script type="module" src="./js/main.js" defer></script>
 </head>
 <body>
   <div class="header">
@@ -50,7 +47,7 @@
       </a>
       <a xlink:href="#bahia">
       <title>Bahia</title>
-<        <path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M313.276,197.775
+      <path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M313.276,197.775
         c2.084-2.739,3.506-7.012,6.464-8.764c1.641-0.973,3.232-4.684,4.271-5.163c2.304-1.014,12.161-25.143,20.706-22.513
         c1.095,0.342,29.881,3.478,32.153,7.532c2.246-0.506,17.582-8.804,25.829-4.999c9.172,4.246,11.225,20.679,11.2,20.843
         c0.107,0.328-0.823,5.765-0.985,5.929c-1.15,1-5.258-0.807-4.22,2.138c1.317,3.751,5.094,10.583,9.97,6.613
@@ -387,11 +384,12 @@
   </svg>
 </div>
   <div id="teste" >
-    <h1 id="titulo" class="tituloTabela">Órgãos autuadores</h1>
-<table border ="1" id="tabela">
-
-</table>
-  <span id="novaTabelaDetalhes"></span>
+    <div>
+      <h1 id="titulo" class="tituloTabela">Órgãos autuadores</h1>
+      <table border ="1" id="tabela">
+      </table>
+      <span id="novaTabelaDetalhes"></span>
+    </div>
   </div>
 </div>
 
